--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 >
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aluraflixelano</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.5">
+    <title>aluraflixleonardo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     </div>
 
     <div>
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=xUJvk2c933s&t=173s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="550" height="305" src="https://www.youtube.com/watch?v=xUJvk2c933s&t=173s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     
 </body>{
